# cat_detection

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: base.py  classifier.py  config.py  database.py  detector.py  utils.py
